--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,13 @@ export(initvals)
 export(layerplot)
 export(makedec)
 export(multdif)
-export(multisimtest)
 export(multistart)
 export(multsame2)
 export(ntsteps2)
 export(onestart)
 export(reduce_nodes_to_focus)
 export(setup2)
+export(smartsurv)
+export(smartsurv.weight)
 export(spreadstep)
 export(squish)
-export(startwt)
